# termplot

./: LICENSE  README.md  pyproject.toml
src/termplot/: __init__.py  _core.py
