[project]
name = "termplot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "termcolor @ git+https://github.com/termcolor/termcolor.git@fd08149"
]

[tool.poetry]
packages = [{include = "termplot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
