[project]
name = "termplot"
version = "0.1.0"
description = ""
authors = [
    {name = "icyveins7",email = "icyveins@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "termcolor (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "termplot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
